--- a/bio.html
+++ b/bio.html
@@ -119,7 +119,7 @@
             <p>I hereby declare that all the information provided here is true to the best of my knowledge.</p>
             <p>Place: Bengaluru</p>
             <p>Date: 20/11/2024</p>
-            <p class="signature">Signature: Uday Raj</p>
+            <p class="signature">Signature: Thejas</p>
         </div>
     </main>
     <footer>
