--- a/bio.html
+++ b/bio.html
@@ -112,7 +112,7 @@
                 </span>
                 <button class="see-more" onclick="toggleMore()">See More</button>
             </div>
-            <img src="PH2.jpeg" alt="Profile Picture" class="profile-picture">
+            <img src="R.png" alt="Profile Picture" class="profile-picture">
         </div>
         <div class="declaration">
             <h3>Declaration</h3>
